--- a/CareerPilot.API/CareerPilot.API.csproj
+++ b/CareerPilot.API/CareerPilot.API.csproj
@@ -7,12 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.SemanticKernel.Core" Version="1.61.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Agents\" />
-    <Folder Include="Plugins\" />
   </ItemGroup>
 
 </Project>
