Add ResumeParserAgent and update data models
This commit introduces a new `ResumeParserAgent` class for extracting structured information from resumes. It also adds an `AppDbContext` class with `DbSet` properties for `User` and `UserFileInfo`, and configures their relationships.

Additionally, new classes `User` and `UserFileInfo` are defined, along with updates to the `CareerPilot.API.csproj` to include necessary package references. A new method `GetResumeFromCludinary` is added in `JobAssistantPlugin.cs`, and the `StorageService` is updated to implement the `IStorageService` interface, providing file upload and retrieval functionalities.

--- a/CareerPilot.API/CareerPilot.API.csproj
+++ b/CareerPilot.API/CareerPilot.API.csproj
@@ -7,14 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CloudinaryDotNet" Version="1.27.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.18" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.18" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.18">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.SemanticKernel.Agents.Core" Version="1.61.0" />
     <PackageReference Include="Microsoft.SemanticKernel.Connectors.OpenAI" Version="1.61.0" />
     <PackageReference Include="Microsoft.SemanticKernel.Core" Version="1.61.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Agents\" />
   </ItemGroup>
 
 </Project>
