--- a/CareerPilot.API/appsettings.json
+++ b/CareerPilot.API/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "CareerPilotDb": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=CareerPilotDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  },
+  "Cloudinary": {
+    "CloudName": "dbymgdsfy",
+    "ApiKey": "325686596141886",
+    "ApiSecret": "VZZ49zYbsyB41-JYo5wSmp6Ohus"
   }
 }
